# phaidana

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.sh
config/: config.example.json  config.json
notebooks/: AnalysisScint.ipynb
src/midas/: __init__.py  event.py  file_reader.py  sequencer.py
src/midas/utils/: helper_test_brpc.py
src/parser/pyreader/: metadata_fetcher.py
src/parser/pyreader/midas/: callbacks.py  client.py  frontend.py
src/phaidana/analysis/: filter.py  fits.py  pulse_finder.py
src/phaidana/parser/: meta_data_card.py
src/phaidana/parser/pyreader/: VX274X_unpacker.py
tests/: pandas_reader.py  raw_wf_plotter.py  reader_test.py  test_fit.py
